--- a/app/partials/commits.html
+++ b/app/partials/commits.html
@@ -12,7 +12,7 @@
             <li><a href="#/repo/{{repository.owner.login}}/{{repository.name}}/members">Members</a></li>
             <li class="active"><a href="#/repo/{{repository.owner.login}}/{{repository.name}}/commits">Commits</a></li>
           </ul>
-          <div class="tab-content">
+          <div class="tab-content commits">
             <h3>Commits Impacts</h3>
             <div id="commits" class="raphael"></div>
             <h3>Additions Impacts</h3>
