--- a/app/partials/repository.html
+++ b/app/partials/repository.html
@@ -20,7 +20,7 @@
           		<div class="span10">
           			<p>{{repository.description}}</p>
           			<div><strong>Language : </strong>{{repository.language}}</div>
-          			<div><strong>Url : </strong>{{repository.url}}</div>
+          			<div><strong>Url : </strong><a href="http://github.com/{{repository.owner.login}}/{{repository.name}}" title="Go to github">http://github.com/{{repository.owner.login}}/{{repository.name}}</a></div>
           			<div><strong>Forks : </strong>{{repository.forks}}</div>
           			<div><strong>Watchers : </strong>{{repository.watchers}}</div>
           		</div>
