--- a/app/css/base.css
+++ b/app/css/base.css
@@ -40,6 +40,9 @@ div.repository img{
 	display:block;
 	float:left;
 }
+#members img{
+	width:80px;
+}
 
 #member .user img{
 	display:block;
@@ -58,7 +61,9 @@ div.repository img{
 #member .user div.info ul li strong{
 	width:100px;
 }
-
+#member .user div.info ul li{
+	clear:both;
+}
 div.raphael{
 	margin-top: -100px;
 	height: 600px;
