--- a/app/partials/repository.html
+++ b/app/partials/repository.html
@@ -12,7 +12,7 @@
             <li><a href="#/repo/{{repository.owner.login}}/{{repository.name}}/members">Members</a></li>
             <li><a href="#/repo/{{repository.owner.login}}/{{repository.name}}/commits">Commits</a></li>
           </ul>
-          <div class="tab-content repository">
+          <div class="tab-content repository ng-cloak">
           	<div class="row-fluid">
           		<div class="span2">
           			<img ng-src="{{repository.owner.avatar_url}}"/>
