--- a/app/partials/members.html
+++ b/app/partials/members.html
@@ -3,30 +3,39 @@
 		<h2>{{repository.name}}</h2>
 	</div>
 </div>
-
-<div class="row-fluid">
-	<div class="span12"> 
-		<div class="tabbable tabs-left">
-          <ul class="nav nav-tabs">
-            <li><a href="#/repo/{{repository.owner.login}}/{{repository.name}}">Home</a></li>
-            <li class="active"><a href="#/repo/{{repository.owner.login}}/{{repository.name}}/members">Members</a></li>
-            <li><a href="#/repo/{{repository.owner.login}}/{{repository.name}}/commits">Commits</a></li>
-          </ul>
-          <div class="tab-content ng-cloak">
-            <div id="members">
-              <ul>
-                <li ng-repeat="member in members">
-                  <a ng-click="popupMember(member)" title="{{member.login}}" >
-                    <img ng-src="{{member.avatar_url}}" alt="{{member.login}}"/>
-                  </a>
-                </li>
-              </ul>
-            </div>
-          </div>
+<div class="row-fluid content">
+    <div class="span2">
+        <div class="tabbable tabs-left">
+            <ul id="sidenav" class="nav nav-tabs " data-spy="affix">
+                <li><a href="#/repo/{{repository.owner.login}}/{{repository.name}}">Home</a></li>
+                <li class="active"><a href="#/repo/{{repository.owner.login}}/{{repository.name}}/members">Members</a></li>
+                <li><a href="#/repo/{{repository.owner.login}}/{{repository.name}}/commits">Commits</a></li>
+                <li><a href="#/repo/{{repository.owner.login}}/{{repository.name}}/stats/commit">Commit stat. </a></li>
+                <li><a href="#/repo/{{repository.owner.login}}/{{repository.name}}/stats/geo">Geo stat.</a></li>
+            </ul>
+            <div class="tab-content ng-cloak"></div>
         </div>
-	</div>
+    </div>
+    <div class="span10">
+        <h3>The team ({{members.length}})</h3>
+        <div class="members">
+            <ul>
+                <li ng-repeat="member in members"><a ng-click="popupMember(member)" title="{{member.login}}"> <img ng-src="{{member.avatar_url}}" alt="{{member.login}}" />
+                </a></li>
+            </ul>
+        </div>
+        <br class="breaker" />
+        <h3>Commiters ({{contributors.length}})</h3>
+        <div class="members">
+            <ul>
+                <li ng-repeat="contributor in contributors"><a ng-click="popupMember(contributor)" title="{{contributor.login}}"> <img ng-src="{{contributor.avatar_url}}"
+                        alt="{{contributor.login}}"
+                    />
+                </a></li>
+            </ul>
+        </div>
+    </div>
 </div>
-
 <div id="member" class="modal hide fade">
   <div class="modal-header">
     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
