--- a/app/partials/repository.html
+++ b/app/partials/repository.html
@@ -9,7 +9,7 @@
             <div class="tabbable tabs-left">
                 <ul id="sidenav" class="nav nav-tabs " data-spy="affix">
                     <li class="active"><a href="#/repo/{{repository.owner.login}}/{{repository.name}}">Home</a></li>
-                    <li"><a href="#/repo/{{repository.owner.login}}/{{repository.name}}/members">Members</a></li>
+                    <li><a href="#/repo/{{repository.owner.login}}/{{repository.name}}/members">Members</a></li>
                     <li><a href="#/repo/{{repository.owner.login}}/{{repository.name}}/commits">Commits</a></li>
                     <li><a href="#/repo/{{repository.owner.login}}/{{repository.name}}/stats/commit">Commit stat. </a></li>
                     <li><a href="#/repo/{{repository.owner.login}}/{{repository.name}}/stats/geo">Geo stat.</a></li>
