--- a/app/partials/stats_commit.html
+++ b/app/partials/stats_commit.html
@@ -27,3 +27,11 @@
         </div>
     </div>
 </div>
+
+<div id="legend">
+    <ul>
+        <li ng-repeat="label in labels">
+            <i style="background-color:{{colors[$index%10]}}"></i><div>{{label}}</div>
+        </li>
+    </ul>
+</div>
