--- a/app/partials/members.html
+++ b/app/partials/members.html
@@ -20,7 +20,9 @@
         <h3>The team ({{members.length}})</h3>
         <div class="members">
             <ul>
-                <li ng-repeat="member in members"><a ng-click="popupMember(member)" title="{{member.login}}"> <img ng-src="{{member.avatar_url}}" alt="{{member.login}}" />
+                <li ng-repeat="member in members">
+                <a ng-click="popupMember(member.login)" title="{{member.login}}">
+                    <img ng-src="{{member.avatar_url}}" alt="{{member.login}}" />
                 </a></li>
             </ul>
         </div>
@@ -28,34 +30,12 @@
         <h3>Commiters ({{contributors.length}})</h3>
         <div class="members">
             <ul>
-                <li ng-repeat="contributor in contributors"><a ng-click="popupMember(contributor)" title="{{contributor.login}}"> <img ng-src="{{contributor.avatar_url}}"
-                        alt="{{contributor.login}}"
-                    />
-                </a></li>
+                <li ng-repeat="contributor in contributors">
+                    <a ng-click="popupMember(contributor.login)" title="{{contributor.login}}"> 
+                        <img ng-src="{{contributor.avatar_url}}" alt="{{contributor.login}}"/>
+                    </a>
+                </li>
             </ul>
         </div>
     </div>
-</div>
-<div id="member" class="modal hide fade">
-  <div class="modal-header">
-    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-    <h3>{{user.login}}</h3>
-  </div>
-  <div class="modal-body">
-    <div class="row-fluid user ng-cloak">
-      <div class="span2"> 
-        <img ng-src="{{user.avatar_url}}" alt="{{user.login}}" />
-      </div>
-      <div class="info span10">
-        <ul>
-          <li ng-show="user.name"><strong>Name :</strong>{{user.name}}</li>
-          <li ng-show="user.email"><strong>Mail :</strong><a href="mailto:{{user.email}}" title="Send a email to {{user.name}}">{{user.email}}</a></li>
-          <li ng-show="user.blog"><strong>Website :</strong><a href="{{user.blog}}" title="Website of {{user.name}}">{{user.blog}}</a></li>
-          <li ng-show="user.location"><strong>Location :</strong>{{user.location}}</li>
-        </ul>
-      </div>
-    </div>
-  </div>
-  <div class="modal-footer">
-  </div>
 </div>
