--- a/app/partials/search.html
+++ b/app/partials/search.html
@@ -1,6 +1,6 @@
 <div class="row-fluid">
 	<div class="span12">
-		<ul class="repositories">
+		<ul class="repositories unstyle">
        		<li ng-repeat="repository in repositories" ng-class-even="'even'" ng-class-odd="'odd'">
        			<a href="#/repo/{{repository.owner}}/{{repository.name}}">
        				{{repository.owner}} / {{repository.name}}
