adding map menu in commit history

--- a/app/partials/commits.html
+++ b/app/partials/commits.html
@@ -12,7 +12,7 @@
                     <li><a href="#/repo/{{repository.owner.login}}/{{repository.name}}/members">Members</a></li>
                     <li class="active"><a href="#/repo/{{repository.owner.login}}/{{repository.name}}/commits">Commits</a></li>
                     <li><a href="#/repo/{{repository.owner.login}}/{{repository.name}}/stats/commit">Commit stat. </a></li>
-                    <!--<li><a href="#/repo/{{repository.owner.login}}/{{repository.name}}/stats/geo">Geo stat.</a></li> -->
+                    <li><a href="#/repo/{{repository.owner.login}}/{{repository.name}}/stats/geo">Geo stat.</a></li>
                 </ul>
                 <div class="tab-content ng-cloak"></div>
             </div>
