--- a/app/partials/stats_commit.html
+++ b/app/partials/stats_commit.html
@@ -32,13 +32,13 @@
         </div>
         <div class="span10">
             <h3>Commits Impacts</h3>
-            <awesomechart type="pie" id="commitsPie" width="400" height="400" data="commits">
+            <awesomechart type="exploded pie" id="commitsPie" width="400" height="400"  data="commits">
             </awesomechart>
             <h3>Additions Impacts</h3>
-            <awesomechart type="pie" id="additionsPie" width="400" height="400" data="additions">
+            <awesomechart type="exploded pie" id="additionsPie" width="400" height="400" data="additions">
             </awesomechart>
             <h3>Deletions Impacts</h3>
-            <awesomechart type="pie" id="deletionsPie" width="400" height="400" data="deletions">
+            <awesomechart type="exploded pie" id="deletionsPie" width="400" height="400" data="deletions">
             </awesomechart>
         </div>
     </div>
