--- a/app/css/base.css
+++ b/app/css/base.css
@@ -139,6 +139,6 @@ div#map{
 	padding:0;
 	z-index:0;
 	height: 500px;
-	background-color:#B5D0D0;
+	background-color:#bed0de;
 	cursor: pointer;
 }
