chane angular app name

--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -2,7 +2,7 @@
 @import play.api.Play
 @import play.api.Play.current
 <!DOCTYPE html>
-<html lang="@locale" ng-app="zenithub">
+<html lang="@locale" ng-app="application">
     <head>
         <title>@title</title>
         <meta charset="utf-8">
