--- a/public/partials/search.html
+++ b/public/partials/search.html
@@ -2,7 +2,7 @@
 	<div class="span12">
 		<ul class="repositories unstyle">
        		<li ng-repeat="repository in repositories" ng-class-even="'even'" ng-class-odd="'odd'">
-       			<a href="#/repo/{{repository.owner}}/{{repository.name}}">
+       			<a ng-click="repoClick(repository.owner, repository.name)">
        				{{repository.owner}} / {{repository.name}}
        			</a>
        			<span>({{repository.language}})</span>
