adding avatar_url

--- a/public/partials/repository.html
+++ b/public/partials/repository.html
@@ -40,6 +40,14 @@
                     </div>
                 </div>
             </div>
+            <div class="row-fluid">
+                <div class="span12">
+                    <h3>If you like this repository, you should take a look at thoses </h3>
+                    <div ng-repeat="reco in recos">
+                          {{reco}}
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
