--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -59,20 +59,6 @@ html {
       }
     }
 
-    .alert {
-
-      h4 {
-        display: inline;
-      }
-
-    }
-    #save {
-      position: absolute;
-      top: 0;
-      left: 33%;
-      width: 33%;
-      z-index: 9999;
-    }
 
     #content {
       background-color: #FFFFFF;
@@ -84,88 +70,15 @@ html {
       height: 95%;
       overflow-y: auto;
 
-      #innercontent {
-        padding-left: 20px;
-        padding-right: 20px;
+      #recos {
+        margin-left:50px;
+        margin-bottom: 10px;
 
-        .hero-unit {
-          background-color: @colorBackground;
-        }
-
-        td.action a {
-          text-decoration: none;
-        }
-
-      }
-
-      > div {
-        height: 100%;
-      }
-
-      .hero-unit h1 {
-        font-size: 50px;
-        margin-bottom: 30px;
-      }
-
-      textarea.boxEdit {
-        width: 100%;
-      }
-
-      div#colLeft {
-        width: 50%;
-        height: 99%;
-        float: left;
-        .codeArea {
-          height: 50%;
-          div.CodeMirror {
-            height: 100%;
-          }
-          border: 1px solid #FFFFFF;
-        }
-
-      }
-
-      div#colRight {
-        width: 50%;
-        height: 99%;
-        float: right;
-
-        iframe {
-          width: 100%;
-          height: 100%;
+        .row-fluid {
+          margin-bottom: 10px;
         }
       }
 
-      #contact {
-        background: url("/assets/images/letter2.png") no-repeat 20px bottom;
-      }
-
-      #stackTech .span4 > img {
-        max-height: 200px;
-        display: block;
-      }
-
-      #home {
-        background-color: @colorPrimaryLight;
-        color: @colorLight;
-        border-radius: 6px 6px 6px 6px;
-        padding: 10px;
-        margin-bottom: 20px;
-
-        img {
-          width: 80%;
-          display: block;
-          margin: 0 auto;
-        }
-      }
-
-      form {
-
-        .input-xxlarge {
-          width: 100%;
-        }
-
-      }
     }
 
     footer {
