--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -59,16 +59,25 @@ html {
       }
     }
 
+    #searchForm {
+      label {
+        font-size: 20px;
+        font-weight: bold;
+      }
+    }
 
     #content {
       background-color: #FFFFFF;
       border-radius: 0 0 6px 6px;
-      box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
-      margin: -20px auto 0px;
+      margin: -20px auto 50px;
       padding: 0;
       padding-top: 20px;
       height: 95%;
       overflow-y: auto;
+
+      div.recos {
+        margin-top:50px;
+      }
 
       #recos {
         margin-left:50px;
@@ -86,6 +95,8 @@ html {
       background-image: linear-gradient(to bottom, @colorPrimaryLight, @colorPrimaryDark, @colorDark);
       background-image: -webkit-linear-gradient(to bottom, @colorPrimaryLight, @colorPrimaryDark, @colorDark);
       color: #FFFFFF;
+      position: fixed;
+      width: 100%;
 
       a {
         color: #FFFFFF;
