--- a/public/partials/repository.html
+++ b/public/partials/repository.html
@@ -40,7 +40,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row-fluid">
+            <div class="row-fluid recos">
                 <div class="span12">
                     <h3>If you like this repository, you should take a look at thoses </h3>
                     <div id="recos">
@@ -58,6 +58,9 @@
                                     </div>
                                 </div>
                             </div>
+                        </div>
+                        <div ng-show="recos.length == 0">
+                            <p>This is probably the first time this repository is ask. We have to index Github data to perform a recommendation. If you are logged, the indexation is currently running in background. So come again on this page in about 5 minutes.</p>
                         </div>
                     </div>
                 </div>
