--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -11,6 +11,8 @@ html {
 
   a { cursor: pointer}
 
+  i:hover { text-decoration: none;}
+
   body {
 
     padding-top: 40px;
@@ -85,6 +87,10 @@ html {
 
         .row-fluid {
           margin-bottom: 10px;
+        }
+
+        img {
+          max-width:80px;
         }
       }
 
